force-app/main/default/objects/Config_API_Param__mdt/Config_API_Param__mdt.object-meta.xml
<CustomObject>
    <description>Define the params and their value for each API</description>
    <label>Config API Param</label>
    <pluralLabel>Config API Params</pluralLabel>
</CustomObject>