force-app/main/default/objects/Config_API_Param__mdt/fields/ConfigAPI__c.field-meta.xml
<CustomField>
    <fullName>ConfigAPI__c</fullName>
    <label>Config API</label>
    <referenceTo>Config_API__mdt</referenceTo>
    <relationshipLabel>Config API Params</relationshipLabel>
    <relationshipName>Config_API_Params</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>