force-app/main/default/objects/Config_API_Param__mdt/fields/Param_Value_Long__c.field-meta.xml
<CustomField>
    <fullName>Param_Value_Long__c</fullName>
    <label>Param Value Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>