force-app/main/default/objects/Config_API_Param__mdt/fields/ParamValue__c.field-meta.xml
<CustomField>
    <fullName>ParamValue__c</fullName>
    <label>Param Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>